--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,6 +14,7 @@ dependencies {
     implementation project(':list')
     testImplementation 'org.junit.jupiter:junit-jupiter:5.10.2'
     implementation "org.xerial:sqlite-jdbc:3.46.1.0"
+    runtimeOnly 'ch.qos.logback:logback-classic:1.5.6'
 }
 application {
     mainClass = 'com.emr.gds.IttiaApp'
